--- a/images/desktop.ini
+++ b/images/desktop.ini
@@ -1,2 +1,4 @@
 [LocalizedFileNames]
 Screenshot 2024-04-23 170140.png=@Screenshot 2024-04-23 170140.png,0
+Screenshot 2024-04-23 172510.png=@Screenshot 2024-04-23 172510.png,0
+Screenshot 2024-04-23 172541.png=@Screenshot 2024-04-23 172541.png,0
